Since extension required libcurl, not PHP's cURL extension, removing the requirement that caused bug #59028