php_solr.c
@@ -879,7 +879,6 @@ static zend_function_entry solr_utils_methods[] = {
 
 /* {{{ solr_module_deps  */
 static zend_module_dep solr_module_deps[] = {
-    ZEND_MOD_REQUIRED(PHP_CURL_EXTENSION_NAME)
     ZEND_MOD_REQUIRED(PHP_LIBXML_EXTENSION_NAME)
 
     { NULL, NULL, NULL }
